// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFixturesTicker rugby should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb gBdBES"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-EHOje iwBZBl"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb gBdBES"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-EHOje iwBZBl"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb gBdBES"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-EHOje iwBZBl"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with fixturesPageUrl 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb gBdBES"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-EHOje iwBZBl"
    />
  </div>
</DocumentFragment>
`;

exports[`OptaFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb gBdBES"
  >
    <div
      class="opta-placeholder sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
    <div
      class="sc-htpNat sc-EHOje feChYV"
    />
  </div>
</DocumentFragment>
`;
